force-app/main/default/objects/Stripe_Price__c/Stripe_Price__c.object-meta.xml
<CustomObject>
    <label>Stripe Price</label>
    <nameField>
        <label>Price Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stripe Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>