force-app/main/default/objects/Stripe_Price__c/fields/Interval__c.field-meta.xml
<CustomField>
    <fullName>Interval__c</fullName>
    <label>Interval</label>
    <length>10</length>
    <type>Text</type>
</CustomField>