force-app/main/default/objects/Stripe_Price__c/fields/Interval_Count__c.field-meta.xml
<CustomField>
    <fullName>Interval_Count__c</fullName>
    <label>Interval Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>