force-app/main/default/objects/Stripe_Price__c/fields/Price_in_cents__c.field-meta.xml
<CustomField>
    <fullName>Price_in_cents__c</fullName>
    <label>Price in cents</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>