force-app/main/default/objects/Stripe_Price__c/fields/Stripe_UID__c.field-meta.xml
<CustomField>
    <fullName>Stripe_UID__c</fullName>
    <externalId>true</externalId>
    <label>Stripe UID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>